@@ -13,6 +13,7 @@ Core and Builtins
 Library
 -------
 
+- Issue #23914: Fixed SystemError raised by CPickle unpickler on broken data.
 
 What's New in Python 2.7.11?
 ============================
